[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["mindset"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.2.0"
pandas = "^1.3.4"
beautifulsoup4 = "^4.10.0"
tqdm = "^4.62.3"
lxml = "^4.6.3"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
